manifests/v0/deployment.fortune-teller.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune-teller
spec:
  selector:
    matchLabels:
      app: fortune-teller
  template:
    metadata:
      labels:
        app: fortune-teller
    spec:
      containers:
        - name: fortune-teller
          image: dockdick/fortune-teller:v0
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 8080
          # Added in v1
          # livenessProbe:
          #   initialDelaySeconds: 1
          #   httpGet:
          #     path: /actuator/health
          #     port: 8080
          # readinessProbe:
          #   initialDelaySeconds: 1
          #   httpGet:
          #     path: /actuator/health
          #     port: 8080
  # replicas: 2
  # strategy: 
  #   rollingUpdate:
  #     maxSurge: 2
  #     maxUnavailable: 2
