manifests/v0/pod.app.yml
apiVersion: v1
kind: Pod
metadata:
  name: fortune-teller
  labels:
    app: fortune-teller
spec:
  containers:
    - name: fortune-teller
      image: dockdick/fortune-teller:v0
      resources:
        limits:
          cpu: "0.5"
          memory: 256M
      ports:
        - containerPort: 8080
