manifests/v0/svc.fortune-teller.clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: fortune-teller-clusterip
spec:
  type: ClusterIP
  selector:
    app: fortune-teller
  ports:
  - name: http
    port: 80
    targetPort: 8080
