manifests/v0/svc.fortune-teller.loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: fortune-teller-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: fortune-teller
  ports:
  - name: http
    port: 80
    nodePort: 30180
    targetPort: 8080
