manifests/v0/svc.fortune-teller.nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: fortune-teller-nodeport
spec:
  type: NodePort
  selector:
    app: fortune-teller
  ports:
  - name: http
    port: 80
    nodePort: 30090
    targetPort: 8080
