manifests/v0/ing.fortune-teller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fortune-teller
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: tell-my-fortune.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: fortune-teller-clusterip
                port:
                  name: http
